// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ember-octane-migration-status-task detects octane migration status for non-octane addon and outputs to json 1`] = `
Array [
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "ruleId": "ember-octane-migration-status-tagless-components",
    "ruleIndex": 2,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "ruleId": "ember-octane-migration-status-tagless-components",
    "ruleIndex": 2,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/routes/my-route.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/services/my-service.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/services/my-service.js",
          },
          "region": Object {
            "startColumn": 25,
            "startLine": 8,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 33,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 39,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 18,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Modifiers : Do not use \`action\`. Instead, use the \`on\` modifier and \`fn\` helper. More info: https://guides.emberjs.com/release/components/template-lifecycle-dom-and-modifiers",
    },
    "ruleId": "ember-octane-migration-status-modifiers",
    "ruleIndex": 5,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
]
`;

exports[`ember-octane-migration-status-task detects octane migration status for non-octane app and outputs to json 1`] = `
Array [
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "ruleId": "ember-octane-migration-status-tagless-components",
    "ruleIndex": 2,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "ruleId": "ember-octane-migration-status-tagless-components",
    "ruleIndex": 2,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "ruleId": "ember-octane-migration-status-glimmer-components",
    "ruleIndex": 0,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/routes/my-route.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/services/my-service.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/services/my-service.js",
          },
          "region": Object {
            "startColumn": 25,
            "startLine": 8,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "ruleId": "ember-octane-migration-status-native-classes",
    "ruleIndex": 1,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 33,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 39,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 18,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Modifiers : Do not use \`action\`. Instead, use the \`on\` modifier and \`fn\` helper. More info: https://guides.emberjs.com/release/components/template-lifecycle-dom-and-modifiers",
    },
    "ruleId": "ember-octane-migration-status-modifiers",
    "ruleIndex": 5,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "ruleId": "ember-octane-migration-status-angle-bracket-syntax",
    "ruleIndex": 3,
  },
  Object {
    "kind": "open",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "ruleId": "ember-octane-migration-status-own-properties",
    "ruleIndex": 4,
  },
]
`;

exports[`ember-octane-migration-status-task detects octane migration status for octane addon and outputs to json 1`] = `Array []`;

exports[`ember-octane-migration-status-task detects octane migration status for octane app and outputs to json 1`] = `Array []`;
